--- a/linux.html
+++ b/linux.html
@@ -1,4 +1,4 @@
+<body bgcolor=blue>
 hello linux world
-Secondd
-hello thirdSupriseyrrraksdlklasklast update guys            
+
 welcome to the automated version
